crates/batuta-tui/tests/snapshots/render__ut_732_tool_dark_180x50.snap
---
source: crates/batuta-tui/tests/render.rs
expression: output
---
batuta · batuta-cli · sess-807cee9774b33f68 · batuta · "Analisar e implementar projeto conforme documentação existente" · active
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
beginning of transcript
▸ user
  Nos vamos analisar para implementar o projeto

▸ batuta
  Vou começar pelo gate de entrega.

  - ler contrato
  - implementar▍
  ▸ reasoning (14 lines)
  ✓ completed mcp__compozy-hosted-tools__compozy__config_get
  × failed mcp__compozy-hosted-tools__compozy__provider_models_list
  ▶ tool Task
  ─ prompt_accepted · turn accepted ─
  ! file_mutation_unverified · executor edited files without verification
  ▪ approval  request req_3f9c  turn turn-073fb634a25a1f32
    approval requested
    a allow once · x reject once
  file: report.txt (text/plain)
  unknown part: future-part


























────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
j/k move  Enter expand  t reasoning  D raw debug  G newest  g oldest  q quit                                                                                                    live
