crates/batuta-tui/tests/snapshots/render__ut_732_tool_expanded.snap
---
source: crates/batuta-tui/tests/render.rs
expression: expanded
---
batuta · batuta-cli · sess-807cee9774b33f68 · batuta · "Analisar e implementar projeto conforme documentação …" · active
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
beginning of transcript
▸ user
  Nos vamos analisar para implementar o projeto

▸ batuta
  Vou começar pelo gate de entrega.

  - ler contrato
  - implementar▍
  ▸ reasoning (14 lines)
  ✓ completed mcp__compozy-hosted-tools__compozy__config_get
    input
      {
        "path": "loops.inputs.batuta-deliver.auto_commit"
      }
    output
      {
        "value": true
      }
  × failed mcp__compozy-hosted-tools__compozy__provider_models_list
    error
      output schema mismatch
  ▶ tool Task
    input
      {
        "description": "Track A: daemon API facts"
      }
  ─ prompt_accepted · turn accepted ─
  ! file_mutation_unverified · executor edited files without verification
  ▪ approval  request req_3f9c  turn turn-073fb634a25a1f32
    approval requested
    a allow once · x reject once
    request
      {
        "request_id": "req_3f9c",
        "summary": "Bash: rm -rf build/",
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
j/k move  Enter expand  t reasoning  D raw debug  G newest  g oldest  q quit                                        live
